[tool.poetry]
name = "pubmed-papers"
version = "0.1.0"
description = "Fetch PubMed papers with authors from pharma/biotech companies."
authors = ["Your Name <you@example.com>"]
packages = [{ include = "pubmed_fetcher" }]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31"

[tool.poetry.scripts]
get-papers-list = "cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
